kubernetes/mycluster/mybackend-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: mybackend-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
  
  selector:
    component: backend
    app: my-app
