kubernetes/mycluster/myfrontend-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: myfrontend-clusterip

spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000
  
  selector:
    app: my-app
    type: frontend
